syntax = "proto3";

package pistonprotection.backend;

import "common.proto";

option go_package = "github.com/pistonprotection/pistonprotection/pkg/proto/backend";

// Backend represents a protected origin server
message Backend {
  string id = 1;
  string organization_id = 2;
  string name = 3;
  string description = 4;

  // Backend type
  BackendType type = 5;

  // Backend addresses (origins)
  repeated Origin origins = 6;

  // Load balancing configuration
  LoadBalancerConfig load_balancer = 7;

  // Health check configuration
  HealthCheckConfig health_check = 8;

  // Protection settings
  ProtectionSettings protection = 9;

  // Domain names pointing to this backend
  repeated string domains = 10;

  // Backend status
  BackendStatus status = 11;

  // Timestamps
  common.Timestamp created_at = 12;
  common.Timestamp updated_at = 13;

  // Tags for organization
  map<string, string> tags = 14;
}

// Backend type
enum BackendType {
  BACKEND_TYPE_UNSPECIFIED = 0;
  BACKEND_TYPE_HTTP = 1;
  BACKEND_TYPE_HTTPS = 2;
  BACKEND_TYPE_TCP = 3;
  BACKEND_TYPE_UDP = 4;
  BACKEND_TYPE_MINECRAFT_JAVA = 5;
  BACKEND_TYPE_MINECRAFT_BEDROCK = 6;
  BACKEND_TYPE_QUIC = 7;
}

// Origin server
message Origin {
  string id = 1;
  string name = 2;

  // Address
  common.IPAddress address = 3;
  uint32 port = 4;

  // Or use hostname
  string hostname = 5;

  // Weight for load balancing
  uint32 weight = 6;

  // Priority for failover
  uint32 priority = 7;

  // Origin-specific settings
  OriginSettings settings = 8;

  // Health status
  common.HealthStatus health_status = 9;

  // Whether origin is enabled
  bool enabled = 10;
}

// Origin-specific settings
message OriginSettings {
  // Connection settings
  uint32 connect_timeout_ms = 1;
  uint32 read_timeout_ms = 2;
  uint32 write_timeout_ms = 3;

  // Connection pool
  uint32 max_connections = 4;
  uint32 max_idle_connections = 5;

  // TLS settings
  TlsSettings tls = 6;

  // Proxy protocol version (0 = disabled, 1, 2)
  uint32 proxy_protocol = 7;

  // Custom headers to add
  map<string, string> headers = 8;
}

// TLS settings for origin connection
message TlsSettings {
  bool enabled = 1;
  bool verify_certificate = 2;
  string sni = 3;  // Server Name Indication
  repeated string ca_certificates = 4;
  string client_certificate = 5;
  string client_key = 6;
}

// Load balancer configuration
message LoadBalancerConfig {
  LoadBalancerAlgorithm algorithm = 1;

  // Sticky sessions
  bool sticky_sessions = 2;
  string sticky_cookie_name = 3;
  uint32 sticky_ttl_seconds = 4;

  // Health-based routing
  bool route_to_healthy_only = 5;
}

// Load balancing algorithm
enum LoadBalancerAlgorithm {
  LOAD_BALANCER_ALGORITHM_UNSPECIFIED = 0;
  LOAD_BALANCER_ALGORITHM_ROUND_ROBIN = 1;
  LOAD_BALANCER_ALGORITHM_LEAST_CONNECTIONS = 2;
  LOAD_BALANCER_ALGORITHM_RANDOM = 3;
  LOAD_BALANCER_ALGORITHM_IP_HASH = 4;
  LOAD_BALANCER_ALGORITHM_WEIGHTED = 5;
}

// Health check configuration
message HealthCheckConfig {
  bool enabled = 1;
  uint32 interval_seconds = 2;
  uint32 timeout_seconds = 3;
  uint32 healthy_threshold = 4;
  uint32 unhealthy_threshold = 5;

  // Protocol-specific check
  oneof check {
    TcpHealthCheck tcp = 6;
    HttpHealthCheck http = 7;
    MinecraftHealthCheck minecraft = 8;
  }
}

// TCP health check
message TcpHealthCheck {
  // Just connection check
}

// HTTP health check
message HttpHealthCheck {
  string method = 1;
  string path = 2;
  map<string, string> headers = 3;
  repeated uint32 expected_status_codes = 4;
  string expected_body_contains = 5;
}

// Minecraft health check
message MinecraftHealthCheck {
  // Query server status
  bool query_status = 1;
  uint32 expected_max_players = 2;
}

// Protection settings for backend
message ProtectionSettings {
  // Enable protection
  bool enabled = 1;

  // Protection level
  ProtectionLevel level = 2;

  // Global rate limits
  common.RateLimit global_rate_limit = 3;
  common.RateLimit per_ip_rate_limit = 4;

  // Challenge settings
  ChallengeSettings challenge = 5;

  // GeoIP settings
  GeoIpSettings geo_ip = 6;

  // L7 specific settings
  L7ProtectionSettings l7_settings = 7;
}

// Protection level
enum ProtectionLevel {
  PROTECTION_LEVEL_UNSPECIFIED = 0;
  PROTECTION_LEVEL_OFF = 1;
  PROTECTION_LEVEL_LOW = 2;
  PROTECTION_LEVEL_MEDIUM = 3;
  PROTECTION_LEVEL_HIGH = 4;
  PROTECTION_LEVEL_UNDER_ATTACK = 5;
}

// Challenge settings
message ChallengeSettings {
  bool enabled = 1;
  ChallengeType type = 2;
  uint32 difficulty = 3;  // 1-10
  uint32 validity_seconds = 4;
}

// Challenge types
enum ChallengeType {
  CHALLENGE_TYPE_UNSPECIFIED = 0;
  CHALLENGE_TYPE_JAVASCRIPT = 1;
  CHALLENGE_TYPE_CAPTCHA = 2;
  CHALLENGE_TYPE_POW = 3;  // Proof of work
}

// GeoIP settings
message GeoIpSettings {
  GeoIpMode mode = 1;
  repeated string countries = 2;  // ISO country codes
}

// GeoIP filtering mode
enum GeoIpMode {
  GEO_IP_MODE_UNSPECIFIED = 0;
  GEO_IP_MODE_DISABLED = 1;
  GEO_IP_MODE_ALLOW_LIST = 2;
  GEO_IP_MODE_BLOCK_LIST = 3;
}

// L7 protection settings
message L7ProtectionSettings {
  // HTTP specific
  HttpProtectionSettings http = 1;

  // Minecraft specific
  MinecraftProtectionSettings minecraft = 2;
}

// HTTP protection settings
message HttpProtectionSettings {
  // WAF rules
  bool waf_enabled = 1;
  WafMode waf_mode = 2;

  // Bot protection
  bool bot_protection = 3;
  BotProtectionMode bot_mode = 4;

  // Request limits
  uint64 max_request_body_size = 5;
  uint32 max_requests_per_connection = 6;

  // Headers
  bool hide_server_header = 7;
  map<string, string> security_headers = 8;
}

// WAF mode
enum WafMode {
  WAF_MODE_UNSPECIFIED = 0;
  WAF_MODE_DETECT = 1;
  WAF_MODE_BLOCK = 2;
}

// Bot protection mode
enum BotProtectionMode {
  BOT_PROTECTION_MODE_UNSPECIFIED = 0;
  BOT_PROTECTION_MODE_ALLOW_ALL = 1;
  BOT_PROTECTION_MODE_CHALLENGE_SUSPICIOUS = 2;
  BOT_PROTECTION_MODE_BLOCK_ALL_BOTS = 3;
}

// Minecraft protection settings
message MinecraftProtectionSettings {
  // Handshake validation
  bool validate_handshake = 1;

  // Status ping protection
  bool protect_status = 2;
  uint32 status_rate_limit = 3;

  // Player limits
  uint32 max_players_per_ip = 4;
  uint32 max_connections_per_second = 5;

  // Query protection
  bool protect_query = 6;

  // Custom motd for challenges
  string challenge_motd = 7;
}

// Backend status
message BackendStatus {
  common.HealthStatus health = 1;
  uint32 healthy_origins = 2;
  uint32 total_origins = 3;

  // Traffic stats
  uint64 requests_per_second = 4;
  uint64 bytes_per_second = 5;

  // Attack status
  bool under_attack = 6;
  string attack_type = 7;
  uint64 attack_pps = 8;  // Packets per second

  // Last status update
  common.Timestamp last_updated = 9;
}

// Backend service
service BackendService {
  // Backend management
  rpc CreateBackend(CreateBackendRequest) returns (CreateBackendResponse);
  rpc GetBackend(GetBackendRequest) returns (GetBackendResponse);
  rpc UpdateBackend(UpdateBackendRequest) returns (UpdateBackendResponse);
  rpc DeleteBackend(DeleteBackendRequest) returns (DeleteBackendResponse);
  rpc ListBackends(ListBackendsRequest) returns (ListBackendsResponse);

  // Origin management
  rpc AddOrigin(AddOriginRequest) returns (AddOriginResponse);
  rpc UpdateOrigin(UpdateOriginRequest) returns (UpdateOriginResponse);
  rpc RemoveOrigin(RemoveOriginRequest) returns (RemoveOriginResponse);

  // Protection settings
  rpc UpdateProtection(UpdateProtectionRequest) returns (UpdateProtectionResponse);
  rpc SetProtectionLevel(SetProtectionLevelRequest) returns (SetProtectionLevelResponse);

  // Status
  rpc GetBackendStatus(GetBackendStatusRequest) returns (GetBackendStatusResponse);
  rpc WatchBackendStatus(WatchBackendStatusRequest) returns (stream BackendStatus);

  // Domain management
  rpc AddDomain(AddDomainRequest) returns (AddDomainResponse);
  rpc RemoveDomain(RemoveDomainRequest) returns (RemoveDomainResponse);
  rpc VerifyDomain(VerifyDomainRequest) returns (VerifyDomainResponse);
}

// Request/Response messages
message CreateBackendRequest {
  string organization_id = 1;
  Backend backend = 2;
}

message CreateBackendResponse {
  Backend backend = 1;
}

message GetBackendRequest {
  string backend_id = 1;
}

message GetBackendResponse {
  Backend backend = 1;
}

message UpdateBackendRequest {
  Backend backend = 1;
}

message UpdateBackendResponse {
  Backend backend = 1;
}

message DeleteBackendRequest {
  string backend_id = 1;
}

message DeleteBackendResponse {
  bool success = 1;
}

message ListBackendsRequest {
  string organization_id = 1;
  common.Pagination pagination = 2;
  BackendType type_filter = 3;
}

message ListBackendsResponse {
  repeated Backend backends = 1;
  common.PaginationInfo pagination = 2;
}

message AddOriginRequest {
  string backend_id = 1;
  Origin origin = 2;
}

message AddOriginResponse {
  Origin origin = 1;
}

message UpdateOriginRequest {
  string backend_id = 1;
  Origin origin = 2;
}

message UpdateOriginResponse {
  Origin origin = 1;
}

message RemoveOriginRequest {
  string backend_id = 1;
  string origin_id = 2;
}

message RemoveOriginResponse {
  bool success = 1;
}

message UpdateProtectionRequest {
  string backend_id = 1;
  ProtectionSettings protection = 2;
}

message UpdateProtectionResponse {
  ProtectionSettings protection = 1;
}

message SetProtectionLevelRequest {
  string backend_id = 1;
  ProtectionLevel level = 2;
}

message SetProtectionLevelResponse {
  ProtectionLevel level = 1;
}

message GetBackendStatusRequest {
  string backend_id = 1;
}

message GetBackendStatusResponse {
  BackendStatus status = 1;
}

message WatchBackendStatusRequest {
  string backend_id = 1;
}

message AddDomainRequest {
  string backend_id = 1;
  string domain = 2;
}

message AddDomainResponse {
  string domain = 1;
  string verification_token = 2;
  string verification_method = 3;
}

message RemoveDomainRequest {
  string backend_id = 1;
  string domain = 2;
}

message RemoveDomainResponse {
  bool success = 1;
}

message VerifyDomainRequest {
  string backend_id = 1;
  string domain = 2;
}

message VerifyDomainResponse {
  bool verified = 1;
  string error = 2;
}
